--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Core theme JS-->
-    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async>
+    <script src="https://cdn.ywxi.net/js/1.js" async>
 
     </script>
 </body>
