Remove download link and add note

--- a/download.html
+++ b/download.html
@@ -73,7 +73,7 @@
                             <div class="card-body p-5">
                                 <div class="small text-uppercase fw-bold text-muted">ISO Download</div>
                                 <div class="mb-3">
-                                    <span class="display-5 fw-bold">JovarkOS <span class="text-muted fs-5">BETA</span>
+                                    <span class="display-5 fw-bold">JovarkOS <span class="text-muted fs-5">ALPHA</span>
                                     </span>
                                 </div>
                                 <ul class="list-unstyled mb-4">
@@ -104,8 +104,9 @@
                                 </ul>
                                 <div class="d-grid"><a class="btn btn-outline-primary"
                                         href="https://iso.jovarkos.org/latest/jovarkos-latest.iso"
-                                        onclick="sendWebhook()">Download</a>
+                                         disabled="true" aria-disabled="true">WIP, will be available soon!</a>
                                 </div>
+								<!-- onclick="sendWebhook()" -->
                             </div>
                         </div>
                     </div>
